[package]
name = "demo"
version = "0.1.0"
authors = ["Song-aff <281218023@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = true

[dependencies]
esp32c3-hal = "0.14.0"
esp-backtrace = { version = "0.10.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.8.0", features = ["esp32c3"] }
max7219 = "0.4.2"
